# aurora-market-network-explorer

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  disclaimer.md  example_analysis.md  network_methodology.md  recruiter_brief.md
examples/: demo_network.py  sample_analysis.md
screenshots/: README.md
src/aurora/: __init__.py  data.py  graph.py  metrics.py  ui.py
tests/: test_graph.py  test_graph_metrics.py
